# flake

./: index.html  package-lock.json  package.json
scripts/: generate-icons.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  icons.rs  launch.rs  lib.rs  main.rs
