[package]
name = "flake"
version = "0.1.0"
description = "A minimalist app launcher"
authors = ["Vime Labs"]
edition = "2021"

[lib]
name = "flake_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
